--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
     <h1>Hello</h1>
     <button>Click me</button>
+    <form>
+        <lu>
+            <li>1</li>
+        </lu>
+    </form>
 </body>
 </html>
